--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Awaken - v37.11 - 10OUT25</title>
+  <title>Awaken - v37.12 - 10OUT25</title>
   <style>
     :root{
       --bg-left-dark: linear-gradient(90deg, rgba(10,10,10,1) 0%, rgba(40,40,40,0.9) 60%);
@@ -226,7 +226,7 @@
       <header>
         <div>
           <h1><img src="https://i.ibb.co/KxQgNLnp/awaken225.png" widht="265px" height="65px" ></h1>
-          <div class="brand">Um complemento para pesquisas do Sleeper Fantasy.</div>
+          <div class="brand">I - A versão mobile está em manutenção, se possível, use a versão web. II - As pesquisas ainda não apontam jogadores em bye week. </div>
         </div>
       </header>
 
