--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Awaken - v37.12 - 10OUT25</title>
+  <title>Awaken - v37.13 - 10OUT25</title>
   <style>
     :root{
       --bg-left-dark: linear-gradient(90deg, rgba(10,10,10,1) 0%, rgba(40,40,40,0.9) 60%);
@@ -315,9 +315,24 @@
         <button class="dark-toggle" id="darkToggle">🌙 OFF</button>
       <!--</div> -->
         <img src="https://i.ibb.co/TMc5pJ0R/jogos-week6-pckt.png" alt="Jogos Semana 6 - 2025">
-	<div> 
-</div>
-      </div>
+	 </div>
+		<button id="toggle-debug">🪲 Debug</button>
+	<div id="debug-log" style="
+  display:none;
+  position:fixed;
+  bottom:0;
+  left:0;
+  width:100%;
+  max-height:40vh;
+  overflow:auto;
+  background:rgba(0,0,0,0.8);
+  color:#0f0;
+  font-family:monospace;
+  font-size:12px;
+  padding:8px;
+  z-index:9999;
+"></div>
+
 
     </div> <!-- fim col-right -->
   </div> <!-- fim page -->
